--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
+    "mapbox-gl": "^2.3.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
